# polynomial-root-finding-pGA

./: .gitignore  CMakeLists.txt  Local.cpp  Local.h  README.md  World.h  main.cpp
Processes/: Master.cpp  Master.h  Process.cpp  Process.h  Worker.cpp  Worker.h
World/: Individual.cpp  Individual.h  Polynomial.cpp  Polynomial.h  Population.cpp  Population.h
